--- a/ProyectoRuben/ProyectoRuben.csproj
+++ b/ProyectoRuben/ProyectoRuben.csproj
@@ -9,10 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="navbar-logo.png" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="MahApps.Metro" Version="2.4.11" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="6.2.1" />
     <PackageReference Include="MaterialDesignThemes" Version="5.3.0" />
@@ -20,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="navbar-logo.png" />
+    <Resource Include="logo.png" />
   </ItemGroup>
 
 </Project>
