--- a/ProyectoRuben/ProyectoRuben.csproj
+++ b/ProyectoRuben/ProyectoRuben.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="error.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MahApps.Metro" Version="2.4.11" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="6.2.1" />
     <PackageReference Include="MaterialDesignThemes" Version="5.3.0" />
@@ -23,7 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="logo.png" />
+    <Resource Include="Recursos\Imagenes\error.jpg" />
+    <Resource Include="Recursos\Imagenes\logo.png" />
   </ItemGroup>
 
 </Project>
